# Ragnarok

./: .gitignore  CMakeLists.txt  Readme.md
include/: aabb.h  aarect.h  box.h  bvh.h  camera.h  cdf.h  color.h  common.h  hittable.h  hittable_list.h  material.h  mesh.h  model.h  onb.h  pdf.h  ray.h  scene.h  sphere.h  texture.h  triangle.h  vector2.h  vector3.h
lib/: assimp-vc142-mt.lib
resource/staircase/: staircase.xml
src/: main.cpp
